--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>This is my website</h1>
+        <h2>Added a second header</h2>
         !Hello, world!
     </body>
 </html>
